--- a/_posts/2012-10-16-Not-a-post.md
+++ b/_posts/2012-10-16-Not-a-post.md
@@ -1,6 +1,6 @@
 ---
 title: Not a post
-layout: default
+layout: post
 ---
 
 Это будет что-то среднее между попыткой написать пост и освоить новый язык.
