Update: Road. Try to fix youtube video embedding

--- a/_posts/2013-05-28-Road.md
+++ b/_posts/2013-05-28-Road.md
@@ -6,7 +6,7 @@ tags: [дорога, auto]
 
 На трассе Нижний Новгород - Саранск вновь начала появляться разметка. Местами даже обновили дорожное полотно. Местами даже лучше стало. Самый плохой участок - между Лукояновым и Ужовкой. Там даже новый асфальт кладут по старой методе - сразу с кочками. Но вот такое встретил впервые:  
 
-<iframe width="480" height="270" src="http://www.youtube.com/embed/5I12A--y-DI" frameborder="0" allowfullscreen></iframe>  
+<iframe width="480" height="270" src="http://www.youtube.com/embed/5I12A--y-DI" frameborder="0" allowfullscreen="1"></iframe>  
 
 Итак, по факту: дыра в дороге глубиной более метра. Участок был обновлен совсем недавно. Если попасть туда колесом на скорости 90 км/ч (трасса же), дальше можно уже не ехать. И это я про четырех- и более колесный транспорт. А что будет с мотоциклистом?  
 Меня часто мучает вопрос, спят ли эти люди спокойно? Как можно так относиться к работе, от которой зависят жизни других людей? Ох, понесло меня что-то.  
