Update: 3 in 1. remove async from twitter script

--- a/_posts/2013-06-05-3in1.md
+++ b/_posts/2013-06-05-3in1.md
@@ -7,7 +7,7 @@ tags: [testing, music, grooveshark, stereomood, tomahawk]
 ### Grooveshark
 Поиски единого всеидеального плеера привели меня к [Tomahawk](http://www.tomahawk-player.org/).  
 <blockquote class="twitter-tweet"><p>@<a href="https://twitter.com/sagodd">sagodd</a> @<a href="https://twitter.com/amaslenn">amaslenn</a> @<a href="https://twitter.com/abukirev">abukirev</a> я кстати нашел, что искал, совсем новый проект - <a href="http://t.co/4EsbD2xiob" title="http://www.tomahawk-player.org/">tomahawk-player.org</a> все отлично</p>&mdash; Usanov Denis (@denis_usanov) <a href="https://twitter.com/denis_usanov/status/342003031187005440">June 4, 2013</a></blockquote>
-<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>  
+<script src="//platform.twitter.com/widgets.js" charset="utf-8"></script>  
 Плеер/социалка выглядит очень похоже на iTunes (полагаю, в ссылке не нуждается). Из явных плюсов -- кросплатформенность. Еще он агрегирует множество аккаунтов с сайтов с музыкой. Любимой [Я.Музыки](http://music.yandex.ru/) нет, но есть [Grooveshark](http://grooveshark.com/). Одна проблема -- для подключения надо указать логин/пароль, что довольно логичено на первый взгляд. Но я пользуюсь Grooveshark'ом, авторизуясь через гугл или твиттер, и у меня просто нет логина и пароля. Попытка сменить несуществующий пароль закончилась ничем -- надо указывать текущий. Которого нет, ага. Вообще, это бага. Хорошая такая, логическая ошибка, допущенная еще при проектировании. Но вот будут ли ее исправлять? Как бы то ни было, техподдержка у них отменная. Отвечают быстро, помогают почти как надо. Оба моих аккаунта объединили в один, часть данных о прослушиваниях потерялась. Пока не удалось восстановить скробблинг в ласт.фм. А без этого ресурс для меня не такой уж и полезный.  
 
 ### Stereomood
