--- a/_posts/2016-12-13-gitlab.md
+++ b/_posts/2016-12-13-gitlab.md
@@ -1,2 +1,26 @@
-Gitlab - очень странная фигня. Я не говорю, что он говно, но... Как можно не давать доступ к результатам мерж реквестов? Ну как?! Они же все равно внутри проверяют, мержатся эти изменения или нет. И ведь люди просят это сделать (https://gitlab.uservoice.com/forums/176466-deprecated-feedback-forum/suggestions/6581273-create-merge-result-refs-for-merge-requests). Неужели кто-то предпочитает мержить _непроверенный_ код? Он ведь по факту именно такой. Или все тупо делают CI сами, без дурацкого GitLab CI?
+---
+title: GitLab, WTF?
+layout: post
+tags: [git, gitlab, CI, development]
+---
 
+Gitlab - очень странная фигня. Я не говорю, что он говно, но... Как можно не давать доступ к
+результатам мерж реквестов? Ну как?! Они же все равно внутри проверяют, мержатся эти изменения или
+нет. И ведь люди [просят это сделать](https://gitlab.uservoice.com/forums/176466-deprecated-feedback-forum/suggestions/6581273-create-merge-result-refs-for-merge-requests).
+
+Неужели кто-то предпочитает мержить _непроверенный_ код? Он ведь по факту именно такой.
+Или все тупо делают CI сами, без дурацкого GitLab CI?
+
+Ладно, эмоции в сторону. По факту, у меня два вопроса к GitLab'у.
+
+### 1. Какого фига нет триггера билда на merge request?
+Понятно, что у них свой [flow](https://about.gitlab.com/2014/09/29/gitlab-flow/) и постоянные
+ребилды merge request'ов очень сильно нагружают CI инфраструктуру. Но. Это можно сделать
+настраиваемым. И отключать по умолчанию.
+
+### 2. Какого фига не хранится результат мержа?
+Это то, с чего я начал. Можно скачать merge request и сделать мерж самому. Но скачать результат
+мержа прямо с сайта было бы удобнее! Для того же CI. Но нет, дорогой пользователь, давай сам, все
+сам. У GitHub результат мержа хранится, что делает настройку CI очень простой и приятной.
+
+Все эти вопросы можно решить обходными путями. Но все могло бы быть проще, сильно проще.
