Use default jekyll-theme-cayman

--- a/_posts/2012-11-20-Yakuake.md
+++ b/_posts/2012-11-20-Yakuake.md
@@ -1,6 +1,6 @@
 ---
 title: Yakuake
-layout: post
+layout: default
 ---
 
 Давненько я не ставил себе кеды. А вот же тебе, пришлось. Все как в старые добрые времена, когда мы с [@FedorKorshunov ](https://twitter.com/FedorKorshunov) кодили SA. Парное программирование, че. Я тогда очень многому у него научился.
