--- a/_posts/2013-01-16-Feynman.md
+++ b/_posts/2013-01-16-Feynman.md
@@ -1,6 +1,6 @@
 ---
 title: Surely You're Joking, Mr. Feynman!
-layout: post
+layout: default
 ---
 Мне доставляет огромное удовольствие читать "Вы, конечно, шутите, мистер Фейнман!". Просто потрясающая книга. Удивительно, как много может достичь человек в самых разных областях, лишь страстно желая учиться. Он - нобелевский лауреат по физике, освоивший музыкальные инструменты, мастерство рисования с натуры и многое другое.
 
