--- a/_posts/2013-03-27-Sync.md
+++ b/_posts/2013-03-27-Sync.md
@@ -1,6 +1,6 @@
 ---
 title: Sync
-layout: post
+layout: default
 ---
 Высыпаться хорошо. А хорошо высыпать - еще лучше.
 Я ложусь спать в районе полуночи. Редко после часа. Уж и не припомню последний такой случай. Я улыбаюсь утром. и днем. И вечером. У меня хорошее настроение, я чувствую себя хорошо. Вокруг же все не так замечательно. Но я внутри своего огороженного мирка, в нем царит мир и спокойствие.  
