--- a/_posts/2013-03-28-Secret.md
+++ b/_posts/2013-03-28-Secret.md
@@ -1,6 +1,6 @@
 ---
 title: Секрет
-layout: post
+layout: default
 ---
 Очень тяжело идет Blues de Moscou от Секрет. Ну ооочень. То ли я, как обычно, сразу не врубаюсь. Либо... Все-таки не торт. Ни одной песни с этого альбома нет в избранном. Может, и не они вовсе?  
 
