--- a/_posts/2017-02-04-git-news.md
+++ b/_posts/2017-02-04-git-news.md
@@ -1,6 +1,6 @@
 ---
 title: Git news
-layout: post
+layout: default
 ---
 
 Главной новостью мира гита в последние дни стал анонс от Microsoft о создании Git Virtual File System (GVFS). Подробнее [тут](https://blogs.msdn.microsoft.com/visualstudioalm/2017/02/03/announcing-gvfs-git-virtual-file-system/).
